# falcon_recipe

./: crud_tester.sh  pyproject.toml  recipes.db  requirements.txt  run.py
app/: __init__.py  settings.py  utils.py
app/api/: recipes.py
app/models/: recipe.py
app/models/fixtures/: data.json
app/services/: recipe_service.py
